[tool.poetry]
name = "leagueprobs"
version = "0.1.0"
description = "Get probabilities of success for different teams in the LoL competitive scene"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
loguru = "^0.5.1"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
